--- a/src/styles/authForm.css
+++ b/src/styles/authForm.css
@@ -14,7 +14,7 @@
 }
 
 .form-section {
-  padding: 40px;
+  /* padding: 40px; */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), -6px 0 8px rgba(255, 255, 255, 0.1);
   transition: transform 0.5s ease-in-out;
 }
@@ -29,9 +29,16 @@ a:hover {
   text-decoration: underline;
 }
 
+@media only screen and (min-width:992px){
+  .custom-rounded {
+    height: 75%;
+  }
+}
+
 @media only screen and (max-width: 767px) {
   .custom-rounded {
     border-bottom-left-radius: 2rem;
     border-bottom-right-radius: 0;
+    width: 100% !important;
   }
 }
