--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -5,6 +5,7 @@
 
 // 2. Définir la nouvelle couleur primaire
 $primary: #45B3F8; // Remplace cette couleur par celle que tu veux
+$secondary: #D9D9D9;
 
 // 3. Importer les variables de Bootstrap
 @import "bootstrap/scss/variables";
